@@ -8,7 +8,6 @@
 	rules
 	% tokens
 	maildir
-- message-id cache, to weed out message duplicates and allow keep for offline
   backups with imap without refetching: to-cache and in-cache actions.
 - balance man pages/manual
 - match attachment expressions:
